--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "seths-bazaar",
+  "name": "seth-bazaar",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -26,6 +26,8 @@
     "next": "14.1.3",
     "node": "^21.7.1",
     "payload": "^2.11.2",
+    "punycode": "^2.3.1",
+    "punycode.js": "^2.3.1",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.2",
